solved spacing issue for the top structure in the css

--- a/src/style.css
+++ b/src/style.css
@@ -1,31 +1,42 @@
-/*font-family: 'Playfair Display', serif;
-font-family: 'Poppins', sans-serif; */
-
-h1 {
+:root {
+  --branding-color: #f9f7fe;
+  --secondary-color: #6c63ff;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+body {
+  font-family: var(--default-font-family);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: black;
-  font-family: "Playfair Display", serif;
+  font-family: var(--heading-font-family);
   font-weight: bold;
+}
+h1 {
   font-size: 96px;
 }
 
 p {
-  font-family: "Poppins", sans-serif;
   font-weight: normal;
 }
 
-.hero {
+.top-structure {
   background: #f9f7fe;
   text-align: center;
-  padding: 160px, 20px;
+  padding: 160px 20px;
 }
-.hero p {
-  font-family: "Poppins", sans-serif;
+.top-structure p {
   font-weight: bold;
   font-size: 36px;
   margin: 0;
 }
-.hero h2 {
-  font-family: "Poppins", sans-serif;
+.top-structure h2 {
+  font-family: var(--default-font-family);
   font-weight: normal;
   font-size: 24px;
   line-height: 2;
@@ -33,9 +44,9 @@ p {
 }
 .btn-branding {
   border-radius: 4px;
-  background: #6c63ff;
-  color: #fff;
-  font-family: Poppins;
+  background: var(--secondary-color);
+  color: white;
   font-size: 18px;
+  line-height: 27px;
   padding: 18px, 30px;
 }
